<resources>
    <string name="app_name">store-challenge</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_store_list">List Store</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_main_menu">Main Menu</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_target">Target Install CDFDPC</string>
    <string name="menu_transmission_history">Transmission History</string>
    <string name="menu_visit">Kunjungan</string>
    <string name="menu_information">Information</string>
    <string name="menu_product_check">Product Check</string>
    <string name="menu_promo">SKU Promo</string>
    <string name="menu_ringkasan_oos">Ringkasan OOS</string>
    <string name="menu_investment">Store Investment</string>
    <string name="menu_store_dashboard">Dashboard Store</string>

    <string name="marquee_text">Untuk support yang luar biasa di masa-masa covid-19 seperti ini.</string>
    
    <string name="store_menu_target">Target</string>
    <string name="store_menu_achievement">Pencapaian</string>

    <string name="btn_cancel">Batal</string>
    <string name="btn_login">Login</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_not_visit">Not Visit</string>
    <string name="btn_visit">Visit</string>
    <string name="btn_end">Selesai</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_search">Cari toko</string>

    <string name="confirm_logout">Apakah Anda yakin ingin keluar dari aplikasi?</string>

    <string name="error_application_not_found">Aplikasi tidak ditemukan</string>
    <string name="error_field_empty">Data harus diisi</string>

    <string name="state_loading">Mohon tunggu…</string>
    <string name="state_location_empty">Belum ada data lokasi</string>
    <string name="state_location_ok">Lokasi sesuai</string>
    <string name="state_location_problem">Lokasi belum sesuai</string>
    <string name="state_not_visit_yet">Last Visit\n&lt;b>Belum mengunjungi toko&lt;b></string>
    <string name="state_visited">Visited</string>

    <string name="title_visit">Kunjungan pada bulan &lt;b>%1$s&lt;/b>></string>
    <string name="title_visit_list">List kunjungan %1$s</string>

    <string name="last_visit">Last Visit \n &lt;b>%1$s&lt;/b></string>

    <string name="rationale_location">Fitur ini memerlukan akses lokasi</string>
    <string name="rationale_visit">Harus foto dan tagging lokasi</string>
</resources>