<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity">

    <ImageView
        android:id="@+id/wave_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/wave"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_one"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <ImageView
        android:id="@+id/wave_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/wave"
        android:rotationX="180"
        android:rotationY="180"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_two"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <TextView
        android:id="@+id/l_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.StoreChallenge.Headline2"
        android:text="@string/btn_login"
        app:layout_constraintTop_toBottomOf="@id/guideline_one"/>

    <com.ayodev.store_challenge.util.custom_view.AppEditText
        android:id="@+id/l_et_username"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        android:drawableStart="@drawable/ic_account"
        android:hint="@string/hint_username"
        android:layout_marginBottom="@dimen/component_margin_large"
        app:layout_constraintStart_toStartOf="@id/l_btn_login"
        app:layout_constraintEnd_toEndOf="@id/l_btn_login"
        app:layout_constraintBottom_toTopOf="@id/l_et_password"/>

    <com.ayodev.store_challenge.util.custom_view.AppEditText
        android:id="@+id/l_et_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/component_margin"
        app:layout_constraintStart_toStartOf="@id/l_btn_login"
        app:layout_constraintEnd_toEndOf="@id/l_btn_login"
        app:layout_constraintBottom_toTopOf="@id/l_cb_keep_username"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/l_cb_keep_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Keep username"
        app:layout_constraintBottom_toTopOf="@id/l_btn_login"
        app:layout_constraintStart_toStartOf="@id/l_btn_login"
        android:layout_marginBottom="@dimen/layout_padding_horizontal_large"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/l_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/layout_padding_horizontal_medium"
        app:layout_constraintBottom_toTopOf="@id/guideline_two"/>


</androidx.constraintlayout.widget.ConstraintLayout>