<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background"
    tools:context=".presentation.main_menu.MainMenuActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mm_guideline_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.075"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mm_guideline_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.15"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mm_guideline_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.225"
        android:orientation="horizontal"/>

    <ImageView
        android:id="@+id/mm_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_profile"
        app:layout_constraintBottom_toTopOf="@+id/mm_guideline_2"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mm_layout_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/component_margin"
        android:paddingHorizontal="@dimen/layout_padding_horizontal_small"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/mm_iv_profile">

        <TextView
            android:id="@+id/mm_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mita Khairunnisa"
            android:textAppearance="@style/TextAppearance.StoreChallenge.Headline5"/>

        <TextView
            android:id="@+id/mm_tv_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin_small"
            android:text="Role: {...}"
            android:textAppearance="@style/TextAppearance.StoreChallenge.Body1"/>

        <TextView
            android:id="@+id/mm_tv_nik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin_medium"
            android:text="NIK: 123456789"
            android:textAppearance="@style/TextAppearance.StoreChallenge.Body1"/>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/mm_iv_profile"
        android:layout_width="@dimen/image_profile"
        android:layout_height="@dimen/image_profile"
        app:layout_constraintTop_toBottomOf="@id/mm_guideline_1"
        app:layout_constraintBottom_toTopOf="@id/mm_guideline_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:civ_border_color="@color/white"
        app:civ_border_width="3dp"
        android:src="@drawable/profile"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sync"
        android:background="@null"
        android:layout_margin="@dimen/layout_padding_horizontal_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mm_layout_user_info"
        app:layout_constraintBottom_toTopOf="@id/mm_layout_menu"
        app:cardCornerRadius="12dp"
        android:layout_marginHorizontal="@dimen/layout_padding_horizontal_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layout_padding_horizontal_small"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mm_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_visit"
                android:textAppearance="@style/TextAppearance.StoreChallenge.Body2"/>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/component_margin_large"
                app:justifyContent="space_between">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/component_margin"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        app:drawableStartCompat="@drawable/ic_warning"
                        android:text="150"
                        android:gravity="center_vertical"
                        android:drawablePadding="@dimen/component_margin_small"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total Store"
                        android:layout_marginTop="@dimen/component_margin_medium"
                        android:textAppearance="@style/TextAppearance.StoreChallenge.Body2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/component_margin"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        app:drawableStartCompat="@drawable/ic_check_circle"
                        android:text="150"
                        android:gravity="center_vertical"
                        android:drawablePadding="@dimen/component_margin_small"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Actual Store"
                        android:layout_marginTop="@dimen/component_margin_medium"
                        android:textAppearance="@style/TextAppearance.StoreChallenge.Body2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/component_margin"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        app:drawableStartCompat="@drawable/ic_check_circle"
                        android:text="150"
                        android:gravity="center_vertical"
                        android:drawablePadding="@dimen/component_margin_small"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Percentage"
                        android:layout_marginTop="@dimen/component_margin_medium"
                        android:textAppearance="@style/TextAppearance.StoreChallenge.Body2"/>

                </LinearLayout>


            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/mm_layout_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MenuBackground"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/layout_padding_horizontal_small"
        android:paddingVertical="@dimen/component_margin_medium"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/mm_title_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.StoreChallenge.Subtitle2"
            android:textColor="@color/yellow"
            android:text="@string/menu_menu"/>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mm_title_menu"
            android:layout_marginTop="@dimen/component_margin_large"
            app:justifyContent="space_between">

            <TextView
                android:id="@+id/mm_btn_visit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.StoreChallenge.MenuButton"
                android:text="@string/menu_visit"
                app:drawableTopCompat="@drawable/ic_store" />

            <TextView
                android:id="@+id/mm_btn_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.StoreChallenge.MenuButton"
                android:text="@string/menu_target"
                app:drawableTopCompat="@drawable/ic_target" />

            <TextView
                android:id="@+id/mm_btn_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.StoreChallenge.MenuButton"
                android:text="@string/menu_dashboard"
                app:drawableTopCompat="@drawable/ic_dashboard" />

            <TextView
                android:id="@+id/mm_btn_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.StoreChallenge.MenuButton"
                android:text="@string/menu_transmission_history"
                app:drawableTopCompat="@drawable/ic_transmission" />

        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:id="@+id/mm_btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.StoreChallenge.MenuButton"
            app:drawableTopCompat="@drawable/ic_logout"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/component_margin_medium"
            android:text="@string/menu_logout"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>